force-app/main/default/objects/Resume__c/fields/certificate__c.field-meta.xml
<CustomField>
    <fullName>certificate__c</fullName>
    <label>certificate</label>
    <length>60</length>
    <type>Text</type>
</CustomField>