force-app/main/default/objects/Resume__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Jabalpur</fullName>
            </value>
            <value>
                <fullName>Gwalior</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Bhubneshwar</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Udaipur</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Allahabaad</fullName>
            </value>
            <value>
                <fullName>Patna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>