force-app/main/default/objects/Resume__c/fields/Comapny_Name__c.field-meta.xml
<CustomField>
    <fullName>Comapny_Name__c</fullName>
    <label>Comapny Name</label>
    <type>TextArea</type>
</CustomField>