force-app/main/default/objects/Resume__c/fields/EduOfCity__c.field-meta.xml
<CustomField>
    <fullName>EduOfCity__c</fullName>
    <label>EduOfCity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>