force-app/main/default/objects/Resume__c/fields/End_Date_10__c.field-meta.xml
<CustomField>
    <fullName>End_Date_10__c</fullName>
    <label>End Date 10</label>
    <type>Date</type>
</CustomField>