force-app/main/default/objects/Resume__c/fields/Passing_Year__c.field-meta.xml
<CustomField>
    <fullName>Passing_Year__c</fullName>
    <label>Passing Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>