force-app/main/default/objects/Resume__c/fields/Passing_YearUG__c.field-meta.xml
<CustomField>
    <fullName>Passing_YearUG__c</fullName>
    <label>Passing YearUG</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>