force-app/main/default/objects/Resume__c/fields/percent10__c.field-meta.xml
<CustomField>
    <fullName>percent10__c</fullName>
    <label>percent10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>