force-app/main/default/objects/Resume__c/fields/percent12th__c.field-meta.xml
<CustomField>
    <fullName>percent12th__c</fullName>
    <label>percent12th</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>