force-app/main/default/objects/Resume__c/fields/percentUG__c.field-meta.xml
<CustomField>
    <fullName>percentUG__c</fullName>
    <label>percentUG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>