force-app/main/default/objects/Resume__c/fields/PlaceOfBirth__c.field-meta.xml
<CustomField>
    <fullName>PlaceOfBirth__c</fullName>
    <label>PlaceOfBirth</label>
    <length>20</length>
    <type>Text</type>
</CustomField>