force-app/main/default/objects/Resume__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>PostalCode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>