force-app/main/default/objects/Resume__c/fields/Prof_City__c.field-meta.xml
<CustomField>
    <fullName>Prof_City__c</fullName>
    <label>Prof City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>