force-app/main/default/objects/Resume__c/fields/Profesional_Summary__c.field-meta.xml
<CustomField>
    <fullName>Profesional_Summary__c</fullName>
    <label>Profesional Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>