force-app/main/default/objects/Resume__c/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <label>Project Duration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>