force-app/main/default/objects/Resume__c/fields/Roles_And_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Roles_And_Responsibilities__c</fullName>
    <label>Roles And Responsibilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>