force-app/main/default/objects/Resume__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>