force-app/main/default/objects/Resume__c/fields/School_and_College__c.field-meta.xml
<CustomField>
    <fullName>School_and_College__c</fullName>
    <label>School and College</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10th</fullName>
            </value>
            <value>
                <fullName>12th</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>