force-app/main/default/objects/Resume__c/fields/School_City__c.field-meta.xml
<CustomField>
    <fullName>School_City__c</fullName>
    <label>School City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>