force-app/main/default/objects/Resume__c/fields/School_Collage_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Collage_Name__c</fullName>
    <label>School/Collage Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>