force-app/main/default/objects/Resume__c/fields/Start_Date_10__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_10__c</fullName>
    <label>Start Date 10</label>
    <type>Date</type>
</CustomField>